refactor:系统日志/Git提交日志
